Minor text revision

--- a/main.tex
+++ b/main.tex
@@ -45,7 +45,7 @@ This paper provides a theoretical introduction to the Autoregressive Integrated 
 \end{keywords}
 
 \section{Introduction}
-Time series forecasting is applicable in many sectors. It is most notably used in finance, given the incredible volatility of the U.S. stock market. However, it also has relevance in geology (earthquake prediction), environmental science (global temperature models), and public health (disease modeling).
+Time series forecasting is applicable in many sectors. It is most notably used in business and finance, as the  U.S. stock market is incredibly volatile. However, it also has relevance in geology (earthquake prediction), environmental science (global temperature models), and public health (disease modeling).
 
 Given the ``big boom" of data collection in the past few decades, time series data is not difficult to acquire. Time series forecasting is applicable to any type of business, and the outcomes of interest can vary greatly in order to fit the business's needs.
 
